// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with BAM authentication and default props 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication"
  >
    <span
      className="HeaderAuthentication__authentication"
    >
      <a
        href="#"
        rel="noreferrer"
        target="_blank"
        title="BAM-9.5.0"
      >
        BAM
        :
         
        <u>
          BAM-9.5.0
        </u>
      </a>
    </span>
    <Tag
      className="HeaderAuthentication__readOnlyLabel"
      size="sm"
      type="gray"
    >
      <span>
        Read-only
      </span>
    </Tag>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with BAM authentication and props 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication varClassName"
  >
    <span
      className="HeaderAuthentication__authentication"
    >
      <a
        href="#"
        rel="noreferrer"
        target="_blank"
        title="BAM-9.5.0"
      >
        BAM
        :
         
        <u>
          BAM-9.5.0
        </u>
      </a>
    </span>
    <Tag
      className="HeaderAuthentication__readOnlyLabel"
      size="sm"
      type="gray"
    >
      <span>
        Read-only
      </span>
    </Tag>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with Micetro authentication 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication"
  >
    <span
      className="HeaderAuthentication__authentication"
    >
      <a
        href="#"
        rel="noreferrer"
        target="_blank"
        title="Micetro-10"
      >
        Micetro
        :
         
        <u>
          Micetro-10
        </u>
      </a>
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with Standalone authentication 1`] = `
<React.Fragment>
  <div
    className="HeaderAuthentication"
  >
    <span
      className="HeaderAuthentication__authentication"
    >
      Standalone
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderAuthentication Rendering Render HeaderAuthentication component with disable show authentication 1`] = `<React.Fragment />`;
